--- a/Views/Urgencias/Editar.cshtml
+++ b/Views/Urgencias/Editar.cshtml
@@ -118,11 +118,9 @@
             </div>
             <div class="row justify-content-md-center">
                 <div class="col col-2">
-                    <button class="btn btn-primary btn-lg">Enviar.</button>
+                    <button class="btn btn-primary btn-lg">Asignar.</button>
                 </div>
-                <div class="col col-2">
-                    <input class="btn btn-danger btn-lg" type="reset" value="Cancelar">.
-                </div>
+                
             </div>
         }
     </section>
